--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
 </head>
 
 <body>
+  <header>
+    <div>Etsy header</div>
+  </header>
+  <main>
+    <div>
+      <section class="sidebar">etsy sidebar</section>
+      <section class="search-results">
+        <div class="search-header"></div>
+        <div class="search-result-items">
+
+<!--     <div class="search-item">
+            <a class="search-item-link" href="item url">
+              <img class="search-item-img" src="item img url" />
+            </a>
+              <div class="search-item-footer">
+                <div class="search-item-title"><a href="item url">item title</a></div>
+                <div class="search-item-vendor"><a href="vendor page">item vendor</a></div>
+                <div class="search-item-cost">item cost</div>
+              </div>
+          </div>-->
+        </div>
+      </section>
+    </div>
+  </main>
+  <footer>
+    <div>etsy footer</div>
+  </footer>
+
+  <script src="http://code.jquery.com/jquery-2.1.1.js"></script>
+  <script src="etsyapi.js"></script>
 </body>
 
 </html>
