refactored and added category list

--- a/index.html
+++ b/index.html
@@ -12,21 +12,27 @@
   </header>
   <main>
     <div>
-      <section class="sidebar">etsy sidebar</section>
+      <section class="sidebar">
+        <div>Show Results For</div>
+        <ul class="search-categories">
+        </ul>
+      </section>
       <section class="search-results">
         <div class="search-header"></div>
         <div class="search-result-items">
 
-<!--     <div class="search-item">
-            <a class="search-item-link" href="item url">
-              <img class="search-item-img" src="item img url" />
-            </a>
+      <!--the below code will be created by the etsyapi.js file for each search item returned
+
+          <div class="search-item">
+            <a class="search-item-link" href="item url"><img class="search-item-img" src="item img url" /></a>
               <div class="search-item-footer">
                 <div class="search-item-title"><a href="item url">item title</a></div>
-                <div class="search-item-vendor"><a href="vendor page">item vendor</a></div>
+                <div class="search-item-vendor"><a href="/shop/item vendor">item vendor</a></div>
                 <div class="search-item-cost">item cost</div>
               </div>
           </div>-->
+
+
         </div>
       </section>
     </div>
