added sort and category functionality

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
       <section class="sidebar">
         <div>Show Results For</div>
         <ul class="search-categories">
+      <!--<li class="category">category_path</li -->
         </ul>
       </section>
       <section class="search-results">
         <div class="search-header"></div>
+        <div class="sortby">Sort By:
+          <ul class="sortby">
+            <li class="sortby-recent"><a href="#">Most Recent</a></li>
+            <li class="sortby-high"><a href="#">Highest Price</a></li>
+            <li class="sortby-low"><a href="#">Lowest Price</a></li>
+          </ul>
+        </div>
         <div class="search-result-items">
 
       <!--the below code will be created by the etsyapi.js file for each search item returned
