--- a/index.html
+++ b/index.html
@@ -15,21 +15,24 @@
       <section class="sidebar">
         <div>Show Results For</div>
         <ul class="search-categories">
-      <!--<li class="category">category_path</li -->
+          <!--<li class="category">category_path</li -->
         </ul>
       </section>
       <section class="search-results">
         <div class="search-header"></div>
         <div class="sortby">Sort By:
           <ul class="sortby">
-            <li class="sortby-recent"><a href="#">Most Recent</a></li>
-            <li class="sortby-high"><a href="#">Highest Price</a></li>
-            <li class="sortby-low"><a href="#">Lowest Price</a></li>
+            <li class="sortby-recent"><a href="#">Most Recent</a>
+            </li>
+            <li class="sortby-high"><a href="#">Highest Price</a>
+            </li>
+            <li class="sortby-low"><a href="#">Lowest Price</a>
+            </li>
           </ul>
         </div>
         <div class="search-result-items">
 
-      <!--the below code will be created by the etsyapi.js file for each search item returned
+          <!--the below code will be created by the etsyapi.js file for each search item returned
 
           <div class="search-item">
             <a class="search-item-link" href="item url"><img class="search-item-img" src="item img url" /></a>
@@ -49,7 +52,7 @@
     <div>etsy footer</div>
   </footer>
 
-  <script src="http://code.jquery.com/jquery-2.1.1.js"></script>
+  <script src="//code.jquery.com/jquery-2.1.1.js"></script>
   <script src="etsyapi.js"></script>
 </body>
 
